legacy/salesforce/objects/WFC27_Object_Binding__c/WFC27_Object_Binding__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Object Binding</label><nameField><label>Object Binding Name</label><type>Text</type></nameField><pluralLabel>WFC27 Object Bindings</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>