legacy/salesforce/objects/WFC27_Object_Binding__c/fields/Bin_Retention_Days__c.field-meta.xml
<CustomField><fullName>Bin_Retention_Days__c</fullName><label>Bin Retention Days</label><precision>5</precision><scale>0</scale><type>Number</type></CustomField>