legacy/salesforce/objects/WFC27_Object_Binding__c/fields/Eligible_Status__c.field-meta.xml
<CustomField><fullName>Eligible_Status__c</fullName><label>Status When Eligible</label><length>20</length><type>Text</type></CustomField>