legacy/salesforce/objects/WFC27_Object_Binding__c/fields/Scan_Cursor__c.field-meta.xml
<CustomField><fullName>Scan_Cursor__c</fullName><label>Live Scan Cursor</label><length>18</length><type>Text</type></CustomField>